[package]
name = "gadd"
version = "0.2.0"
edition = "2021"
authors = ["hermannm"]
license = "MIT"
description = "Command-line utility for staging changes to Git (alternative to git-add's interactive mode)."
keywords = ["git"]
categories = ["command-line-utilities"]
repository = "https://github.com/hermannm/gadd"
exclude = ["cross-compile.sh"]

[dependencies]
anyhow = "1.0.70"
arboard = { version = "3.2.0", default_features = false }
crossterm = { version = "0.26.1", default-features = false }
git2 = { version = "0.17.1", default-features = false }
ratatui = "0.20.1"
wsl = "0.1.0"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.3.9"
