[package]
name = "gadd"
version = "0.4.0"
edition = "2021"
authors = ["hermannm"]
license = "MIT"
description = "Command-line utility for staging changes to Git (alternative to git-add's interactive mode)."
keywords = ["git"]
categories = ["command-line-utilities"]
repository = "https://github.com/hermannm/gadd"
homepage = "https://hermannm.dev/gadd"
exclude = ["cross-compile.sh"]

[dependencies]
anyhow = "1.0.70"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
crossterm = { version = "0.26.1", default-features = false }
git2 = { version = "0.17.1", features = [
    "ssh",
    "https",
    "ssh_key_from_memory",
    "vendored-openssl",
] }
ratatui = "0.26.1"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.3.9"
