[package]
name = "gadd"
version = "0.5.1"
edition = "2021"
authors = ["hermannm"]
license = "MIT"
description = "Command-line utility for staging changes to Git (alternative to git-add's interactive mode)."
keywords = ["git"]
categories = ["command-line-utilities"]
repository = "https://github.com/hermannm/gadd"
homepage = "https://hermannm.dev/gadd"
exclude = ["cross-compile.sh"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = { version = "0.29.0" }
git2 = { version = "0.20.2", features = [
    "ssh",
    "https",
    "vendored-openssl",
] }
ratatui = "0.29.0"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.3.9"
